Fix input border radius on ios

--- a/packages/manager-components/src/blocks/Input/styles.css
+++ b/packages/manager-components/src/blocks/Input/styles.css
@@ -12,6 +12,8 @@
   line-height: 1;
   min-height: 38px;
   background-color: var(--color-white);
+  -webkit-appearance: none;
+  border-radius: 0;
 }
 
 .input__field,
